# py-uart-proxy

./: .gitignore  CHANGELOG.md  PROTOCOL.md  README.arch.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
examples/: uart_helper_broker.py
plugins/: example_alert_plugin.py
src/uart_proxy/: __init__.py  __main__.py  _version.py  cli.py
src/uart_proxy/core/: __init__.py  bus.py  events.py  line_assembler.py  recorder.py  retention.py  session.py  timestamp.py
src/uart_proxy/io/: __init__.py  socket_source.py  source.py  uart_source.py
src/uart_proxy/plugins/: __init__.py  base.py  manager.py
src/uart_proxy/plugins/builtin/: __init__.py  grep.py
src/uart_proxy/proxy/: __init__.py  protocol.py  server.py
src/uart_proxy/ui/: __init__.py  headless.py  tui.py
tests/: conftest.py  test_broker_interop.py  test_bus.py  test_cli.py  test_grep_plugin.py  test_line_assembler.py  test_protocol.py  test_proxy_e2e.py  test_reconnect.py  test_recorder.py  test_retention.py  test_session.py  test_timestamp.py  test_tui.py  test_version.py
